--- a/src/style/_element-card.scss
+++ b/src/style/_element-card.scss
@@ -1,22 +1,22 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:300,400,500');
 
-$color-primary: #676767;
-$color-card-bg: #ffffff;
-$color-more-btn: #afafaf;
+$ec-color-primary: #676767;
+$ec-color-card-bg: #ffffff;
+$ec-color-more-btn: #afafaf;
 
-$font-family: 'Montserrat', sans-serif;
-$basic-font-size: 13px;
+$ec-font-family: 'Montserrat', sans-serif;
+$ec-basic-font-size: 13px;
 
 .element-card {
-    font-family: $font-family;
-    font-size: $basic-font-size;
+    font-family: $ec-font-family;
+    font-size: $ec-basic-font-size;
     font-weight: 300;
-    color: $color-primary;
-    background-color: $color-card-bg;
+    color: $ec-color-primary;
+    background-color: $ec-color-card-bg;
     border-radius: 5px;
     width: 100%;
     box-shadow: 0 1px 5px rgba(0, 0, 0, 0.15);
-    
+
     .image-container {
         background-position: center;
         background-size: cover;
@@ -42,14 +42,14 @@ $basic-font-size: 13px;
             }
 
             .read-more {
-                color: $color-primary;
+                color: $ec-color-primary;
                 text-decoration: none;
                 font-weight: bold;
             }
         }
 
         .author {
-            border-top: 1px solid lighten($color-more-btn, 22%);
+            border-top: 1px solid lighten($ec-color-more-btn, 22%);
             display: flex;
             justify-content: space-between;
             align-items: center;
@@ -72,7 +72,7 @@ $basic-font-size: 13px;
                     font-size: 0.8em;
 
                     .lighter {
-                        color: lighten($color-primary, 30%);
+                        color: lighten($ec-color-primary, 30%);
                     }
                 }
             }
@@ -81,9 +81,9 @@ $basic-font-size: 13px;
                 line-height: 2.3em;
 
                 a {
-                    background-color: $color-card-bg;
-                    border: 2px solid $color-more-btn;
-                    color: darken($color-more-btn, 10%);
+                    background-color: $ec-color-card-bg;
+                    border: 2px solid $ec-color-more-btn;
+                    color: darken($ec-color-more-btn, 10%);
                     font-size: 0.8em;
                     font-weight: 500;
                     text-transform: uppercase;
